--- a/style.css
+++ b/style.css
@@ -90,6 +90,7 @@ header {
   background-color:#fff;
   border-radius: 40px;
   border: 1px 2px 1px solid #42445A;
+  position: relative;
 }
 
 .menu-icon {
@@ -100,14 +101,24 @@ header {
 }
 
 .selection {
-  padding: 13px;
-  background-color: #fff;
+  padding: 10px;
+  background-image: url('images/code-img.jpg ');
   display:none ;
   text-align: center;
-  border-bottom-left-radius: 66px;
-  border-bottom-right-radius: 59px;
+  border-radius: 80px;
   border: 2px solid darkred;
   box-shadow: 1px 2px 1px 2px black;
+  position: absolute;
+  margin: 10px;
+  left: 95px;
+  right: 90px;
+  top: 90px;
+  bottom: 100px;
+  z-index: 1000;
+  width: 58%;
+  height: 70%;
+  color: #fff;
+  
 
  
   
@@ -120,8 +131,8 @@ header {
 }
 
 button {
-  margin: 3px;
-  padding: 5px;
+  margin: 10px;
+  padding: 10px;
   color: #fff;
   background-color: #020632;
   border-radius: 5px;
@@ -129,7 +140,7 @@ button {
 
 button:hover {
   background-color: #fff;
-  color: #000
+  color: #000;
   
 }
 
